--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
+    "fstream": "^1.0.12",
+    "handlebars": "^4.1.2",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.13",
+    "lodash.mergewith": "^4.6.2",
     "rxjs": "~6.3.3",
+    "tar": "^2.2.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
