--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.5",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.5.4",
     "fstream": "^1.0.12",
     "handlebars": "^4.1.2",
